# macro-code-editor

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
packaging/: README-copr.md  macro-editor.spec
src/: app.rs  config.rs  editor.rs  file_tree.rs  highlight.rs  lsp.rs  main.rs  ui.rs
